# isle

./: .clang-format  .gitignore  CMakeLists.txt
CONFIG/: MainDlg.cpp  MainDlg.h  config.cpp  config.h
CONFIG/res/: config.rc  resource.h
ISLE/: isleapp.cpp  isleapp64.cpp  isleapp64.h
LEGO1/lego/legoomni/src/input/: legoinputmanager.cpp
LEGO1/mxdirectx/: legodxinfo.cpp
LEGO64/lego/legoomni/include/: legomain.h  legovideomanager.h
LEGO64/lego/legoomni/src/audio/: mxbackgroundaudiomanager.cpp
LEGO64/lego/legoomni/src/common/: misc.cpp  mxcompositemediapresenter.cpp  mxcontrolpresenter.cpp  mxtransitionmanager.cpp
LEGO64/lego/legoomni/src/main/: legomain.cpp
LEGO64/lego/legoomni/src/video/: legovideomanager.cpp
LEGO64/modeldb/: modeldb.cpp
LEGO64/mxvulkan/: mxvulkan.cpp  mxvulkan.h  mxvulkandevice.cpp  mxvulkandevice.h  mxvulkanfunctions.h  mxvulkanplatform.cpp  mxvulkanplatform.h  mxvulkanswapchain.cpp  mxvulkanswapchain.h  vulkanplatform.cpp  vulkanplatform.h
LEGO64/omni/include/: flic.h  mxobjectfactory.h  mxomni.h  mxomnicreateparam.h  mxvideoparam.h
LEGO64/omni/src/audio/: mxsoundmanager.cpp
LEGO64/omni/src/common/: mxobjectfactory.cpp  mxpresenter.cpp
LEGO64/omni/src/video/: mxdisplaysurface.cpp  mxvideomanager.cpp  mxvideoparam.cpp
